trying to connect backend

--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
     "expo": "^49.0.21",
     "expo-cli": "^6.3.10",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-media-library": "^15.6.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
