--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "^15.6.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
