--- a/package.json
+++ b/package.json
@@ -43,6 +43,15 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "tailwindcss": "3.3.2"
+  },"expo": {
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ]
   },
   "private": true
 }
