--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "^15.6.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "firebase": "^10.7.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -35,6 +36,7 @@
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-input-select": "^1.3.3",
+    "react-native-phone-call": "^1.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
